fix(ARIA): change in contrast ratio for labels, removal of aria-owns for radio group of stars, add r

--- a/src/css/writing_component.scss
+++ b/src/css/writing_component.scss
@@ -12,6 +12,10 @@
   .text-section :global(.pe-textfield__input-area:after) {
     opacity: 0 !important;
   }
+
+  :global(label.pe-textfield__label) {
+    color: #767676;
+  }
 }
 
 .rating-banner {
